--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "date-fns": "^3.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
